main 3.0 (no error)